# openvm

./: .clang-format  .gitignore  CHANGELOG.md  Cargo.toml  README.md  rust-toolchain.toml
benchmarks/execute/: Cargo.toml
benchmarks/execute/benches/: execute.rs  fibonacci_execute.rs  regex_execute.rs
benchmarks/execute/examples/: regex_execute.rs
benchmarks/execute/src/: execute-leaf-verifier.rs  execute-verifier.rs  main.rs  preflight-leaf-verifier.rs
benchmarks/guest/: Cargo.toml
benchmarks/guest/base64_json/: Cargo.toml
benchmarks/guest/base64_json/elf/: openvm-json-program.elf
benchmarks/guest/bincode/: Cargo.toml
benchmarks/guest/bincode/elf/: openvm-bincode-program.elf
benchmarks/guest/bubblesort/: Cargo.toml
benchmarks/guest/bubblesort/elf/: openvm-bubblesort-program.elf
benchmarks/guest/bubblesort/src/: main.rs
benchmarks/guest/ecrecover/: Cargo.toml
benchmarks/guest/ecrecover/elf/: openvm-ecdsa-recover-key-program.elf
benchmarks/guest/factorial_iterative_u256/: Cargo.toml  openvm.toml
benchmarks/guest/factorial_iterative_u256/elf/: openvm-factorial-iterative-u256-program.elf
benchmarks/guest/factorial_iterative_u256/src/: main.rs
benchmarks/guest/fibonacci/: Cargo.toml
benchmarks/guest/fibonacci/elf/: openvm-fibonacci-program.elf
benchmarks/guest/fibonacci_iterative/: Cargo.toml
benchmarks/guest/fibonacci_iterative/elf/: openvm-fibonacci-iterative-program.elf
benchmarks/guest/fibonacci_iterative/src/: main.rs
benchmarks/guest/fibonacci_recursive/: Cargo.toml
benchmarks/guest/fibonacci_recursive/elf/: openvm-fibonacci-recursive-program.elf
benchmarks/guest/fibonacci_recursive/src/: main.rs
benchmarks/guest/keccak256/: Cargo.toml
benchmarks/guest/keccak256/elf/: openvm-keccak256-program.elf
benchmarks/guest/keccak256/src/: main.rs
benchmarks/guest/keccak256_iter/: Cargo.toml
benchmarks/guest/keccak256_iter/elf/: openvm-keccak256-iter-program.elf
benchmarks/guest/keccak256_iter/src/: main.rs
benchmarks/guest/kitchen-sink/: Cargo.toml  openvm_init.rs
benchmarks/guest/kitchen-sink/elf/: openvm-kitchen-sink-program.elf
benchmarks/guest/pairing/: Cargo.toml  openvm_init.rs
benchmarks/guest/pairing/elf/: openvm-pairing-program.elf
benchmarks/guest/pairing/src/: main.rs
benchmarks/guest/quicksort/: Cargo.toml
benchmarks/guest/quicksort/elf/: openvm-quicksort-program.elf
benchmarks/guest/quicksort/src/: main.rs
benchmarks/guest/regex/: Cargo.toml  regex_email.txt
benchmarks/guest/regex/elf/: openvm-regex-program.elf
benchmarks/guest/revm_snailtracer/: Cargo.toml
benchmarks/guest/revm_snailtracer/elf/: openvm-revm-snailtracer.elf
benchmarks/guest/revm_transfer/: Cargo.toml
benchmarks/guest/revm_transfer/elf/: openvm-revm-transfer.elf
benchmarks/guest/revm_transfer/src/: main.rs
benchmarks/guest/rkyv/: Cargo.toml
benchmarks/guest/rkyv/elf/: openvm-rkyv-program.elf
benchmarks/guest/sha256/: Cargo.toml
benchmarks/guest/sha256/elf/: openvm-sha256-program.elf
benchmarks/guest/sha256/src/: main.rs
benchmarks/guest/sha256_iter/: Cargo.toml
benchmarks/guest/sha256_iter/elf/: openvm-sha256-iter-program.elf
benchmarks/guest/sha256_iter/src/: main.rs
benchmarks/prove/: Cargo.toml
benchmarks/prove/src/: util.rs
benchmarks/utils/: Cargo.toml
benchmarks/utils/src/: build-elfs.rs  generate-fixtures.rs  lib.rs
crates/circuits/mod-builder/: Cargo.toml  build.rs
crates/circuits/mod-builder/src/: README.md  builder.rs  core_chip.rs  cuda_abi.rs  lib.rs  symbolic_expr.rs  tests.rs  utils.rs
crates/circuits/poseidon2-air/: Cargo.toml  build.rs
crates/circuits/poseidon2-air/src/: air.rs  config.rs  cuda_abi.rs  lib.rs  permute.rs  tests.rs
crates/circuits/primitives/: Cargo.toml  build.rs
crates/circuits/primitives/src/: cuda_abi.rs  lib.rs  sub_air.rs  utils.rs
crates/pil-air-builder/: Cargo.toml
crates/pil-air-builder/src/: lib.rs  symbolic_builder.rs  symbolic_expression.rs  symbolic_variable.rs
crates/sdk/guest/little/: Cargo.toml
crates/sdk/guest/p256/: Cargo.toml
crates/toolchain/tests/: Cargo.toml
crates/toolchain/tests/src/: lib.rs
crates/toolchain/tests/tests/: riscv_test_vectors.rs  transpiler_tests.rs
crates/vm/: Cargo.toml  build.rs
crates/vm/derive/: Cargo.toml
crates/vm/derive/src/: common.rs  lib.rs  nontco.rs  tco.rs
crates/vm/src/: cuda_abi.rs  lib.rs
crates/vm/src/arch/: config.rs  execution.rs  execution_control.rs  extensions.rs  integration_api.rs  interpreter.rs  interpreter_preflight.rs  mod.rs  record_arena.rs  segment.rs  segmentation_strategy.rs  state.rs  vm.rs
crates/vm/src/metrics/: mod.rs
crates/vm/src/system/: mod.rs
crates/vm/src/utils/: mod.rs  stark_utils.rs  test_utils.rs
crates/vm/tests/: integration_test.rs
examples/algebra/: Cargo.toml  openvm_init.rs
examples/algebra/src/: main.rs
extensions/algebra/circuit/: Cargo.toml  build.rs
extensions/algebra/circuit/src/: config.rs  execution.rs  fields.rs  fp2.rs  fp2_extension.rs  lib.rs  modular_extension.rs
extensions/ecc/circuit/: Cargo.toml
extensions/ecc/circuit/src/: config.rs  lib.rs  weierstrass_extension.rs
extensions/keccak256/circuit/: Cargo.toml  build.rs
extensions/keccak256/circuit/src/: air.rs  columns.rs  execution.rs  extension.rs  lib.rs  tests.rs  trace.rs
extensions/native/circuit/: Cargo.toml  build.rs
extensions/native/circuit/examples/: fibonacci.rs
extensions/native/circuit/src/: cuda_abi.rs  extension.rs  lib.rs  utils.rs
extensions/native/circuit/tests/: arithmetic.rs  cycle_tracker.rs  ext.rs  hint.rs  integration_test.rs  io.rs  poseidon2.rs  public_values.rs
extensions/pairing/circuit/: Cargo.toml
extensions/pairing/circuit/src/: config.rs  cuda.rs  fp12.rs  lib.rs  pairing_extension.rs
extensions/sha256/circuit/: Cargo.toml  build.rs
scripts/: Cargo.toml  build.rs  download_setup.sh  generate_clangd.sh  run_clang_tidy.sh
scripts/generate_clangd/: main.rs
scripts/src/: lib.rs
tracegen-gpu/: Cargo.toml  README.md  build.rs
tracegen-gpu/src/: lib.rs  utils.rs
tracegen-gpu/src/extensions/: mod.rs
(+788 files in other folders)
