[package]
name = "openvm-scripts"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
openvm-cuda-common = { workspace = true, optional = true }
eyre = { workspace = true }
serde = { workspace = true }
clap = { version = "4.5.9", features = ["derive", "env"] }
serde_yaml = "0.9"
walkdir = "2.5"

[features]
cuda = ["dep:openvm-cuda-common"]

[package.metadata.cargo-shear]
ignored = ["openvm-cuda-common"]

[[bin]]
name = "generate-clangd"
path = "bin/generate_clangd.rs"
required-features = ["cuda"]

[[bin]]
name = "run-clang-tidy"
path = "bin/run_clang_tidy.rs"
required-features = ["cuda"]
