[package]
name = "tracegen-gpu"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
cuda-runtime-sys = { workspace = true }
rand = { version = "0.8.5", default-features = false }
tracing = { workspace = true }
derive-new = { workspace = true }

# stark-backend
stark-backend-gpu = { workspace = true }
openvm-stark-backend = { workspace = true }
openvm-stark-sdk = { workspace = true }
num-traits = { workspace = true }

# openvm
openvm-circuit = { workspace = true }
openvm-circuit-primitives = { workspace = true }
openvm-instructions = { workspace = true }
openvm-native-circuit = { workspace = true }
openvm-native-compiler = { workspace = true }
openvm-rv32-adapters = { workspace = true }
openvm-rv32im-circuit = { workspace = true }
openvm-algebra-circuit = { workspace = true }
openvm-algebra-transpiler = { workspace = true }
openvm-mod-circuit-builder = { workspace = true }
openvm-ecc-circuit = { workspace = true }
openvm-ecc-transpiler = { workspace = true }
openvm-keccak256-circuit = { workspace = true }
openvm-sha256-air = { workspace = true }
openvm-sha256-circuit = { workspace = true }
openvm-sha256-transpiler = { workspace = true }
openvm-poseidon2-air = { workspace = true }
openvm-bigint-circuit = { workspace = true }
openvm-pairing-circuit = { workspace = true }

# p3
p3-air = { workspace = true }
p3-field = { workspace = true }
p3-baby-bear = { workspace = true }
p3-keccak-air = { workspace = true }

serde.workspace = true
num-bigint.workspace = true
derive_more.workspace = true
strum.workspace = true
halo2curves-axiom.workspace = true

hex = { workspace = true }
bytemuck = { workspace = true }

[build-dependencies]
cc = { workspace = true }
glob = { workspace = true }

[dev-dependencies]
test-case = { workspace = true }
itertools = { workspace = true, features = ["use_std"] }
openvm-circuit = { workspace = true, features = ["test-utils"] }
openvm-rv32-adapters = { workspace = true, features = ["test-utils"] }
openvm-mod-circuit-builder = { workspace = true, features = ["test-utils"] }
openvm-rv32im-transpiler = { workspace = true }
openvm-keccak256-transpiler = { workspace = true }
openvm-sha256-transpiler = { workspace = true }
openvm-pairing-guest = { workspace = true, features = ["bls12_381"] }
strum = { workspace = true }
eyre = { workspace = true }
tracegen-gpu = { path = ".", features = ["test-utils"] }

[features]
default = ["metrics"]
metrics = ["openvm-circuit/metrics"]
test-utils = ["openvm-circuit/test-utils"]
touchemall = ["stark-backend-gpu/touchemall"]

[package.metadata.cargo-shear]
ignored = ["derive_more"]
