[package]
name = "openvm-benchmarks-execute"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
openvm-benchmarks-utils.workspace = true
# cargo-openvm.workspace = true
openvm-circuit.workspace = true
# openvm-sdk.workspace = true
openvm-stark-sdk.workspace = true
openvm-transpiler.workspace = true
openvm-rv32im-circuit.workspace = true
openvm-rv32im-transpiler.workspace = true
openvm-bigint-circuit.workspace = true
openvm-bigint-transpiler.workspace = true
openvm-keccak256-circuit.workspace = true
openvm-keccak256-transpiler.workspace = true
openvm-sha256-circuit.workspace = true
openvm-sha256-transpiler.workspace = true
eyre.workspace = true
derive_more = { workspace = true, features = ["from"] }
rand.workspace = true
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
divan = { package = "codspeed-divan-compat", version = "*" }

[features]
default = ["jemalloc"]
mimalloc = ["openvm-circuit/mimalloc"]
jemalloc = ["openvm-circuit/jemalloc"]
jemalloc-prof = ["openvm-circuit/jemalloc-prof"]
nightly-features = ["openvm-circuit/nightly-features"]
profiling = ["openvm-circuit/function-span", "openvm-transpiler/function-span"]

# [[bench]]
# name = "fibonacci_execute"
# harness = false

# [[bench]]
# name = "regex_execute"
# harness = false

[[bench]]
name = "execute"
harness = false

[package.metadata.cargo-shear]
ignored = ["derive_more", "rand"]
