[package]
name = "openvm-benchmarks-prove"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
openvm-benchmarks-utils.workspace = true
openvm-circuit.workspace = true
openvm-continuations.workspace = true
openvm-sdk.workspace = true
openvm-stark-backend.workspace = true
openvm-stark-sdk.workspace = true
openvm-transpiler.workspace = true
openvm-rv32im-circuit.workspace = true
openvm-rv32im-transpiler.workspace = true
openvm-keccak256-circuit.workspace = true
openvm-keccak256-transpiler.workspace = true
openvm-algebra-circuit.workspace = true
openvm-ecc-circuit.workspace = true
openvm-pairing-circuit.workspace = true
openvm-pairing-guest.workspace = true
openvm-native-circuit.workspace = true
openvm-native-compiler.workspace = true
openvm-native-recursion = { workspace = true, features = ["test-utils"] }

clap = { version = "4.5.9", features = ["derive", "env"] }
eyre.workspace = true
tokio = { version = "1.43.1", features = ["rt", "rt-multi-thread", "macros"] }
rand_chacha = { version = "0.3", default-features = false }
k256 = { workspace = true, features = ["ecdsa"] }
tiny-keccak.workspace = true
derive_more = { workspace = true, features = ["from"] }
num-bigint = { workspace = true, features = ["std", "serde"] }
rand.workspace = true
tracing.workspace = true
toml.workspace = true

[dev-dependencies]

[features]
default = ["parallel", "jemalloc", "metrics"]
metrics = ["openvm-sdk/metrics"]
perf-metrics = ["openvm-sdk/perf-metrics", "metrics"]
aggregation = []                                    # runs leaf aggregation benchmarks
evm = ["openvm-sdk/evm-verify"]
parallel = ["openvm-sdk/parallel"]
mimalloc = ["openvm-sdk/mimalloc"]
jemalloc = ["openvm-sdk/jemalloc"]
jemalloc-prof = ["openvm-sdk/jemalloc-prof"]
nightly-features = ["openvm-sdk/nightly-features"]

[package.metadata.cargo-shear]
ignored = ["derive_more", "rand"]

[[bin]]
name = "fib_e2e"
path = "src/bin/fib_e2e.rs"
# TODO: cfg run benchmark with prove stark if no evm feature
required-features = ["evm"]

[[bin]]
name = "kitchen_sink"
path = "src/bin/kitchen_sink.rs"
# TODO: cfg run benchmark with prove stark if no evm feature
required-features = ["evm"]
