[package]
name = "openvm-benchmarks-prove"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
openvm-benchmarks-utils.workspace = true
openvm-circuit = { workspace = true, features = ["test-utils"] }
openvm-continuations.workspace = true
openvm-sdk.workspace = true
openvm-stark-backend.workspace = true
openvm-stark-sdk.workspace = true
openvm-transpiler.workspace = true
openvm-native-circuit.workspace = true
openvm-native-compiler.workspace = true
openvm-native-recursion = { workspace = true, features = ["test-utils"] }

clap = { workspace = true, features = ["derive", "env"] }
eyre.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
rand_chacha = { version = "0.3", default-features = false }
k256 = { workspace = true, features = ["ecdsa"] }
tiny-keccak.workspace = true
derive_more = { workspace = true, features = ["from"] }
rand.workspace = true
tracing.workspace = true
metrics.workspace = true

[dev-dependencies]

[features]
default = ["parallel", "jemalloc", "metrics"]
metrics = ["openvm-sdk/metrics"]
tco = ["openvm-sdk/tco"]
perf-metrics = ["openvm-sdk/perf-metrics", "metrics"]
stark-debug = ["openvm-sdk/stark-debug"]
async = ["openvm-sdk/async"]
# runs leaf aggregation benchmarks:
aggregation = []
evm = ["openvm-sdk/evm-verify"]
parallel = ["openvm-sdk/parallel"]
mimalloc = ["openvm-sdk/mimalloc"]
jemalloc = ["openvm-sdk/jemalloc"]
jemalloc-prof = ["openvm-sdk/jemalloc-prof"]
nightly-features = ["openvm-sdk/nightly-features"]

cuda = [
    "openvm-circuit/cuda",
    "openvm-native-circuit/cuda",
    "openvm-sdk/cuda",
]

[package.metadata.cargo-shear]
ignored = ["derive_more", "rand"]

[[bin]]
name = "fib_e2e"
path = "src/bin/fib_e2e.rs"

[[bin]]
name = "kitchen_sink"
path = "src/bin/kitchen_sink.rs"

[[bin]]
name = "async_regex"
path = "src/bin/async_regex.rs"
required-features = ["async"]
