[package]
name = "openvm-circuit"
description = "OpenVM circuits"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
p3-baby-bear = { workspace = true }

openvm-poseidon2-air = { workspace = true }
openvm-stark-backend = { workspace = true }
openvm-circuit-primitives = { workspace = true }
openvm-circuit-primitives-derive = { workspace = true }
openvm-circuit-derive = { workspace = true }
openvm-instructions = { workspace = true }
openvm-stark-sdk = { workspace = true, optional = true }

itertools.workspace = true
tracing.workspace = true
derive-new.workspace = true
derive_more = { workspace = true, features = ["from"] }
enum_dispatch.workspace = true
backtrace.workspace = true
rand.workspace = true
serde.workspace = true
serde-big-array.workspace = true
metrics = { workspace = true, optional = true }
thiserror.workspace = true
rustc-hash.workspace = true
eyre.workspace = true
derivative.workspace = true
static_assertions.workspace = true
getset.workspace = true
dashmap.workspace = true

[target.'cfg(any(unix, windows))'.dependencies]
memmap2.workspace = true

[dev-dependencies]
test-log.workspace = true

openvm-circuit = { workspace = true, features = ["test-utils"] }
openvm-stark-sdk.workspace = true
openvm-native-circuit = { workspace = true, features = ["test-utils"] }
openvm-native-compiler.workspace = true
openvm-rv32im-transpiler.workspace = true

[features]
default = ["parallel", "jemalloc"]
parallel = [
    "openvm-stark-backend/parallel",
    "dashmap/rayon",
    "openvm-stark-sdk?/parallel",
]
metrics = [
    "dep:metrics",
    "openvm-stark-backend/metrics",
    "openvm-stark-sdk?/metrics",
]
# turns on more invasive profiling for fine-grained guest metrics
perf-metrics = ["metrics"]
# use basic memory instead of mmap:
basic-memory = []
# turns on stark-backend debugger in all proofs
stark-debug = []
test-utils = ["openvm-stark-sdk"]
# performance features:
mimalloc = ["openvm-stark-backend/mimalloc"]
jemalloc = ["openvm-stark-backend/jemalloc"]
jemalloc-prof = ["openvm-stark-backend/jemalloc-prof"]
nightly-features = ["openvm-stark-sdk?/nightly-features"]
