[package]
name = "openvm-json-program"
version.workspace = true
edition.workspace = true

[dependencies]
openvm = { workspace = true, features = ["std"] }
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
serde = { version = "1.0.214", default-features = false, features = ["derive"] }
serde-json-core = "0.6.0"

[features]
default = []
