[package]
name = "openvm-bincode-program"
version.workspace = true
edition.workspace = true

[dependencies]
openvm = { workspace = true, features = ["std"] }
bincode = { version = "2.0.0-rc.3", default-features = false, features = [
    "derive",
    "alloc",
    "serde",
] }
rand = { version = "0.8.5", default-features = false }
rand_pcg = "0.3.1"

[features]
default = []
