[workspace]
[package]
name = "openvm-factorial-iterative-u256-program"
version = "0.0.0"
edition = "2021"

[dependencies]
openvm = { path = "../../../crates/toolchain/openvm", features = ["std"] }
openvm-ruint = { path = "../../../guest-libs/ruint/", package = "ruint", default-features = false }

[features]
default = []

[profile.profiling]
inherits = "release"
debug = 2
strip = false
