[package]
name = "openvm-kitchen-sink-program"
version.workspace = true
edition.workspace = true

[dependencies]
openvm = { workspace = true, features = [
    "std",
] }
openvm-algebra-guest.workspace = true
openvm-ecc-guest.workspace = true
openvm-pairing = { workspace = true, features = [
    "bn254",
    "bls12_381",
] }
openvm-keccak256.workspace = true
openvm-sha2.workspace = true
openvm-k256.workspace = true
openvm-p256.workspace = true
openvm-ruint.workspace = true
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
serde = "1.0"

[features]
default = []
