[package]
name = "openvm-pairing-program"
version.workspace = true
edition.workspace = true

[dependencies]
openvm = { workspace = true, features = ["std"] }
openvm-algebra-guest.workspace = true
openvm-ecc-guest.workspace = true
openvm-pairing = { workspace = true, features = [
    "bn254",
] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }

[features]
default = []
