[package]
name = "openvm-revm-snailtracer"
version.workspace = true
edition.workspace = true

[dependencies]
openvm = { workspace = true, features = ["std"] }
revm = { version = "18.0.0", default-features = false }
# revm does not re-export this feature so we enable it here
derive_more = { version = "1.0.0", default-features = false, features = [
    "from",
    "display",
] }

[features]
default = []
