[package]
name = "openvm-rkyv-program"
version.workspace = true
edition.workspace = true

[dependencies]
openvm = { workspace = true, features = ["std"] }
rand = { version = "0.8.5", default-features = false }
rand_pcg = "0.3.1"
rkyv = { version = "0.8.8", default-features = false, features = [
    "alloc",
    "unaligned",
] }

[features]
default = []
