[package]
name = "openvm-poseidon2-air"
description = "Wrapper for the Plonky3 Poseidon2 AIR."
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
p3-monty-31 = { workspace = true }
p3-symmetric = { workspace = true }
p3-poseidon2 = { workspace = true }
p3-poseidon2-air = { workspace = true }
zkhash = { workspace = true }

openvm-stark-backend = { workspace = true }
openvm-stark-sdk = { workspace = true }
openvm-cuda-backend = { workspace = true, optional = true }
openvm-cuda-common = { workspace = true, optional = true }

rand.workspace = true
lazy_static.workspace = true
derivative.workspace = true

[dev-dependencies]
p3-symmetric = { workspace = true }

[build-dependencies]
openvm-cuda-builder.workspace = true

[features]
default = ["parallel"]
parallel = ["openvm-stark-backend/parallel"]
cuda = ["dep:openvm-cuda-common", "dep:openvm-cuda-backend"]
touchemall = ["openvm-cuda-backend/touchemall"]
