[package]
name = "openvm-circuit-primitives"
description = "Library of plonky3 primitives for general purpose use in other ZK circuits."
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
openvm-stark-backend = { workspace = true }
openvm-circuit-primitives-derive = { workspace = true }
openvm-cuda-backend = { workspace = true, optional = true }
openvm-cuda-common = { workspace = true, optional = true }

rand.workspace = true
derive-new.workspace = true
itertools.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
tracing.workspace = true

[dev-dependencies]
test-case.workspace = true
openvm-stark-sdk = { workspace = true }

[build-dependencies]
openvm-cuda-builder.workspace = true

[features]
default = ["parallel"]
parallel = ["openvm-stark-backend/parallel"]
cuda = ["dep:openvm-cuda-common", "dep:openvm-cuda-backend"]
touchemall = ["openvm-cuda-backend/touchemall"]
