[package]
name = "openvm-toolchain-tests"
description = "Tests for the OpenVM toolchain starting from Rust"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
openvm-build.workspace = true
openvm-circuit.workspace = true
openvm-transpiler.workspace = true
eyre.workspace = true
tempfile.workspace = true

[dev-dependencies]
openvm-stark-backend.workspace = true
openvm-stark-sdk.workspace = true
openvm-circuit = { workspace = true, features = ["test-utils"] }
openvm-algebra-transpiler.workspace = true
openvm-bigint-circuit.workspace = true
openvm-rv32im-circuit.workspace = true
openvm-rv32im-transpiler.workspace = true
openvm-algebra-circuit.workspace = true
openvm-ecc-circuit = { workspace = true }
openvm-instructions = { workspace = true }
openvm-platform = { workspace = true }
test-case.workspace = true
rand = { workspace = true }
serde = { workspace = true, features = ["alloc"] }
derive_more = { workspace = true, features = ["from"] }

[target.'cfg(not(target_os = "zkvm"))'.dependencies]
num-bigint.workspace = true

[features]
default = ["parallel"]
parallel = ["openvm-circuit/parallel"]
cuda = [ "openvm-rv32im-circuit/cuda" ]
tco = ["openvm-circuit/tco"]
touchemall = [ 
    "cuda",
    "openvm-circuit/touchemall",
]

[package.metadata.cargo-shear]
ignored = ["derive_more", "openvm-stark-backend", "rand"]
